tests/testcases/errors/BCE0132-1.boo
"""
BCE0132-1.boo(9,7): BCE0132: The namespace 'Foo.Bar' already contains a definition for 'A'.
"""
namespace Foo.Bar

class A:
	pass
	
class A:
	pass
